--- a/index.html
+++ b/index.html
@@ -57,65 +57,27 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/prl.jpg" alt="prl" width="160" height="160">
+              <img src="images/uai.png" alt="prl" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://drive.google.com/file/d/13rVuJpcytRdLYCnKpq46g7B7IzSrPQ2P/view?usp=sharing">
-                <papertitle>Parallelizing Reinforcement Learning</papertitle>
-              </a>
+                <papertitle>Modeling Financial Uncertainty with Multivariate Temporal Entropy-based Curriculums</papertitle>
               <br>
-              <strong>Jonathan T. Barron</strong>, <a href="http://www.eecs.berkeley.edu/~dsg/">Dave Golland</a>, <a href="http://www.cs.berkeley.edu/~nickjhay/">Nicholas J. Hay</a>
+              Ramit Sawhney, Arnav Wadhwa, Vivek Mittal, Ayush Mangal, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
-              <em>Technical Report</em>, 2009
-              <br>
-              <a href="data/BarronPRL2009.bib">bibtex</a>
-              <p>Markov Decision Problems which lie in a low-dimensional latent space can be decomposed, allowing modified RL algorithms to run orders of magnitude faster in parallel.</p>
+              <em>37th Conference on Uncertainty in Artificial Intelligence</em>(UAI 2021)
             </td>
           </tr>
 
-          <tr onmouseout="ibrnet_stop()" onmouseover="ibrnet_start()">
+          <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='ibrnet_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/ibrnet_after.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/ibrnet_before.jpg' width="160">
-              </div>
-              <script type="text/javascript">
-                function ibrnet_start() {
-                  document.getElementById('ibrnet_image').style.opacity = "1";
-                }
-
-                function ibrnet_stop() {
-                  document.getElementById('ibrnet_image').style.opacity = "0";
-                }
-                ibrnet_stop()
-              </script>
+              <img src="images/uai.png" alt="prl" width="160" height="160">
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://ibrnet.github.io/">
-                <papertitle>IBRNet: Learning Multi-View Image-Based Rendering</papertitle>
-              </a>
+            <td width="75%" valign="middle">
+                <papertitle>TED: A Time Evolving Discourse Contextual Model for Speaker State Analysis in Political Debates</papertitle>
               <br>
-              <a href="https://www.cs.cornell.edu/~qqw/">Qianqian Wang</a>,
-              <a href="https://www.linkedin.com/in/zhicheng-wang-96116897/">Zhicheng Wang</a>,
-              <a href="https://www.kylegenova.com/">Kyle Genova</a>,
-              <a href="https://people.eecs.berkeley.edu/~pratul/">Pratul Srinivasan</a>,
-              <a href="https://scholar.google.com/citations?user=Rh9T3EcAAAAJ&hl=en">Howard Zhou</a>, <br>
-              <strong>Jonathan T. Barron</strong>, 
-              <a href="http://www.ricardomartinbrualla.com/">Ricardo Martin-Brualla</a>,
-              <a href="https://www.cs.cornell.edu/~snavely/">Noah Snavely</a>, 
-              <a href="https://www.cs.princeton.edu/~funk/">Thomas Funkhouser</a>
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
-              <em>CVPR</em>, 2021
-              <br>
-              <a href="https://ibrnet.github.io/">project page</a> /
-              <a href="https://github.com/googleinterns/IBRNet">code</a> / 
-              <a href="https://arxiv.org/abs/2102.13090">arXiv</a>
-              <p></p>
-              <p>By learning how to pay attention to input images at render time, 
-                  we can amortize inference for view synthesis and reduce error rates by 15%.</p>
+              <em>30th International Joint Conference on Artificial Intelligence</em>(IJCAI 2021)[AR=13.9%]
             </td>
           </tr>
 
