--- a/index.html
+++ b/index.html
@@ -77,49 +77,35 @@
               <br>
               Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
-              <em>30th International Joint Conference on Artificial Intelligence</em>(IJCAI 2021)[AR=13.9%]
+              <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021)[AR=13.9%]
             </td>
           </tr>
 
-          <tr onmouseout="nerv_stop()" onmouseover="nerv_start()">
+          <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <div class="one">
-                <div class="two" id='nerv_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/hotdog.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/hotdog.jpg' width="160">
-              </div>
-              <script type="text/javascript">
-                function nerv_start() {
-                  document.getElementById('nerv_image').style.opacity = "1";
-                }
-
-                function nerv_stop() {
-                  document.getElementById('nerv_image').style.opacity = "0";
-                }
-                nerv_stop()
-              </script>
+              <img src="images/uai.png" alt="prl" width="160" height="160">
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="https://people.eecs.berkeley.edu/~pratul/nerv/">
-                <papertitle>NeRV: Neural Reflection and Visibility Fields for Relighting and View Synthesis</papertitle>
+            <td width="75%" valign="middle">
+                <papertitle>Hyperbolic Online Stream Modeling</papertitle>
+              <br>
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
+              <br>
+              <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021), Short
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://www.aclweb.org/anthology/2021.naacl-main.316/">
+                <papertitle>Quantitative Day Trading From Natural Language Using Reinforcement Learning</papertitle>
               </a>
               <br>
-              <a href="https://people.eecs.berkeley.edu/~pratul/">Pratul Srinivasan</a>,
-              <a href="https://boyangdeng.com/">Boyang Deng</a>,
-              <a href="https://people.csail.mit.edu/xiuming/">Xiuming Zhang</a>, <br>
-              <a href="http://matthewtancik.com/">Matthew Tancik</a>,
-              <a href="https://bmild.github.io/">Ben Mildenhall</a>,
-              <strong>Jonathan T. Barron</strong>
+              Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
-              <em>CVPR</em>, 2021
-              <br>
-              <a href="https://people.eecs.berkeley.edu/~pratul/nerv/">project page</a> /
-              <a href="https://www.youtube.com/watch?v=4XyDdvhhjVo">video</a> /
-              <a href="https://arxiv.org/abs/2012.03927">arXiv</a>
-              <p></p>
-              <p>Using neural approximations of expensive visibility integrals lets you recover relightable NeRF-like models.</p>
+              <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (NAACL 2021)
             </td>
           </tr>
 
