--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <table style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -108,6 +108,37 @@
               <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (NAACL 2021)
             </td>
           </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://theweb.miteam.eu/asset/C8W9GHS6EJd7JsgJv">
+                <papertitle>Exploring the Scale-Free Nature of Stock Markets: Hyperbolic Graph Learning for Algorithmic Trading</papertitle>
+              </a>
+              <br>
+              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
+              <br>
+              <em>30th The Web Conference</em>, (WWW 2021)
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://theweb.miteam.eu/asset/C8W9GHS6EJd7JsgJv">
+                <papertitle>FAST: Financial news and tweet based Time Aware network for Stock Trading</papertitle>
+              </a>
+              <br>
+              Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
+              <br>
+              <em>European Chapter of the Association for Computational Linguistics</em>, (EACL 2021), [AR=24%]
+            </td>
+          </tr>
+
 
 
           <tr onmouseout="winr_stop()" onmouseover="winr_start()">
