--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="prl" width="160" height="160">
+              <img src="images/uai.png" alt="prl" height="160">
             </td>
             <td width="75%" valign="middle">
                 <papertitle>Modeling Financial Uncertainty with Multivariate Temporal Entropy-based Curriculums</papertitle>
               <br>
               Ramit Sawhney, Arnav Wadhwa, Vivek Mittal, Ayush Mangal, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
-              <em>37th Conference on Uncertainty in Artificial Intelligence</em>(UAI 2021)
+              <em>37th Conference on Uncertainty in Artificial Intelligence</em> (UAI 2021)
             </td>
           </tr>
 
@@ -195,7 +195,7 @@
               <br>
              Ramit Sawhney, <strong>Shivam Agarwal</strong>, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
-              <em>International Conference on Data Mining</em>, (ICDM 2020), [AR=9.7%]
+              <em>IEEE International Conference on Data Mining</em>, (ICDM 2020), [AR=9.7%]
             </td>
           </tr>
         </tbody></table>
