--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <td width="75%" valign="middle">
                 <papertitle>Modeling Financial Uncertainty with Multivariate Temporal Entropy-based Curriculums</papertitle>
               <br>
-              Ramit Sawhney, Arnav Wadhwa, Vivek Mittal, Ayush Mangal, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
+              Ramit Sawhney, Arnav Wadhwa, Vivek Mittal, Ayush Mangal, <strong>Shivam Agarwal</strong>, Rajiv Shah
               <br>
               <em>37th Conference on Uncertainty in Artificial Intelligence</em> (UAI 2021)
             </td>
@@ -68,7 +68,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="prl" width="160" height="160">
+              <img src="images/ijcai.png" alt="prl" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
                 <papertitle>TED: A Time Evolving Discourse Contextual Model for Speaker State Analysis in Political Debates</papertitle>
@@ -81,7 +81,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="prl" width="160" height="160">
+              <img src="images/sigir.png" alt="prl" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
                 <papertitle>Hyperbolic Online Stream Modeling</papertitle>
@@ -94,7 +94,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+              <img src="images/naacl.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://www.aclweb.org/anthology/2021.naacl-main.316/">
@@ -124,7 +124,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+              <img src="images/eacl.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://theweb.miteam.eu/asset/C8W9GHS6EJd7JsgJv">
@@ -139,7 +139,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+              <img src="images/aaai.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://ojs.aaai.org/index.php/AAAI/article/view/16127">
@@ -154,7 +154,7 @@
 
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+              <img src="images/coling.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://www.aclweb.org/anthology/2020.coling-main.426/">
@@ -171,7 +171,7 @@
 
             <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+              <img src="images/emnlp.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://www.aclweb.org/anthology/2020.emnlp-main.676/">
@@ -186,7 +186,7 @@
 
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/uai.png" alt="blind-date" width="160" height="160">
+              <img src="images/icdm.png" alt="blind-date" width="160" height="160">
             </td>
             <td width="75%" valign="middle">
               <a href="https://ieeexplore.ieee.org/document/9338303">
