--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/0.png"><img style="width:100%;max-width:100%" alt="profile photo" src="images/0.png" class="hoverZoomLink"></a>
+              <a href="images/0.png"><img alt="profile photo" src="images/0.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
