--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="google-site-verification" content="80MzsMivncVKDRepiOXYRZMIzoUOb3iYBvriT3aa5zQ" />
 
   <title>Shivam Agarwal</title>
   
