--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <img src="images/eacl.png" alt="eacl21" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://theweb.miteam.eu/asset/C8W9GHS6EJd7JsgJv">
+              <a href="https://www.aclweb.org/anthology/2021.eacl-main.185/">
                 <papertitle>FAST: Financial news and tweet based Time Aware network for Stock Trading</papertitle>
               </a>
               <br>
