--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <br><p>
               Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
-              <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021)[AR=13.9%]
+              <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021), [AR=13.9%]
             </p>
             </td>
           </tr>
