--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <img src="images/uai.png" alt="www21" height="160">
             </td>
             <td width="75%" valign="middle">
-              <a href="https://theweb.miteam.eu/asset/C8W9GHS6EJd7JsgJv">
+              <a href="https://dl.acm.org/doi/fullHtml/10.1145/3442381.3450095">
                 <papertitle>Exploring the Scale-Free Nature of Stock Markets: Hyperbolic Graph Learning for Algorithmic Trading</papertitle>
               </a>
               <br>
