--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                 <a href="https://github.com/shivamag125/">Github</a>
               </p>
             </td>
-            <td style="padding:2.5%;width:30%;max-width:30%">
-              <center><a href="images/0.png"><img alt="profile photo" src="images/0.png" class="hoverZoomLink"></a></center>
+            <td style="padding:2.5%;width:30%;max-width:30%";text-align: center>
+              <a href="images/0.png"><img alt="profile photo" src="images/0.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
