--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle" text-align: center>
               <img src="images/uai.png" alt="uai21" height="160">
             </td>
             <td width="75%" valign="middle">
