--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://github.com/shivamag125/">Github</a>
               </p>
             </td>
-            <td style="padding:2.5%;width:30%;max-width:30%" text-align: center>
+            <td style="padding:2.5%;width:30%;max-width:30%">
               <a href="images/0.png"><img alt="profile photo" src="images/0.png" class="hoverZoomLink"></a>
             </td>
           </tr>
@@ -54,7 +54,7 @@
 
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle" text-align: center>
+            <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/uai.png" alt="uai21" height="160">
             </td>
             <td width="75%" valign="middle">
