--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://github.com/shivamag125/">Github</a>
               </p>
             </td>
-            <td style="padding:2.5%;width:30%;max-width:30%;text-align: center">
+            <td style="padding:2.5%;width:30%;max-width:30%;text-align:center">
               <a href="images/0.png"><img alt="profile photo" src="images/0.png" class="hoverZoomLink"></a>
             </td>
           </tr>
@@ -68,7 +68,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/ijcai.png" alt="ijcai21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -82,7 +82,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/sigir.png" alt="sigir21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -97,7 +97,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/naacl.png" alt="naacl21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -114,7 +114,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/uai.png" alt="www21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -131,7 +131,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/eacl.png" alt="eacl21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -147,7 +147,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/aaai.png" alt="aaai21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -163,7 +163,7 @@
           </tr>
 
             <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/coling.png" alt="coling21" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -181,7 +181,7 @@
           </tr>
 
             <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/emnlp.png" alt="emnlp20" height="160">
             </td>
             <td width="75%" valign="middle">
@@ -197,7 +197,7 @@
           </tr>
 
           <tr>
-            <td style="padding:20px;width:25%;vertical-align:middle">
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/icdm.png" alt="icdm20" height="160">
             </td>
             <td width="75%" valign="middle">
