--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
               <img src="images/sigir.png" alt="sigir21" height="160">
             </td>
             <td width="75%" valign="middle">
+            <a href="https://dl.acm.org/doi/abs/10.1145/3404835.3463119">
                 <papertitle>Hyperbolic Online Stream Modeling</papertitle>
+            </a>    
               <br>
               <p>
               Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
