--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
               <img src="images/ijcai.png" alt="ijcai21" height="160">
             </td>
             <td width="75%" valign="middle">
-                <papertitle>TED: A Time Evolving Discourse Contextual Model for Speaker State Analysis in Political Debates</papertitle>
+              <a href="https://www.ijcai.org/proceedings/2021/0489">
+                <papertitle>TEC: A Time Evolving Contextual Graph Model for Speaker State Analysis in Political Debates</papertitle>
               <br><p>
               Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
