--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <papertitle>Stock Selection via Spatiotemporal Hypergraph Attention Network: A Learning to Rank Approach</papertitle>
               </a>
               <br><p>
-             Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
+             Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Tyler Derr, Rajiv Ratn Shah
               <br>
               <em>AAAI Conference on Artificial Intelligence</em>, (AAAI 2021), [AR=21%]
             </p>
