--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <papertitle>TEC: A Time Evolving Contextual Graph Model for Speaker State Analysis in Political Debates</papertitle>
               </a>
               <br><p>
-              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
+              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021), [AR=13.9%]
             </p>
@@ -93,7 +93,7 @@
             </a>    
               <br>
               <p>
-              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
+              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021), Short
             </p>
@@ -127,7 +127,7 @@
               </a>
               <br>
               <p>
-              Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
+              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>30th The Web Conference</em>, (WWW 2021)
             </p>
@@ -159,7 +159,7 @@
                 <papertitle>Stock Selection via Spatiotemporal Hypergraph Attention Network: A Learning to Rank Approach</papertitle>
               </a>
               <br><p>
-             Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Tyler Derr, Rajiv Ratn Shah
+              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Tyler Derr, Rajiv Ratn Shah
               <br>
               <em>AAAI Conference on Artificial Intelligence</em>, (AAAI 2021), [AR=21%]
             </p>
@@ -193,7 +193,7 @@
                 <papertitle>Deep Attentive Learning for Stock Movement Prediction From Social Media Text and Company Correlations</papertitle>
               </a>
               <br><p>
-             Ramit Sawhney*, <strong>Shivam Agarwal</strong>*, Arnav Wadhwa, Rajiv Ratn Shah
+              <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>Empirical Methods in Natural Language Processing</em>,  (EMNLP 2020), [AR=24.6%]
             </p>
