--- a/index.html
+++ b/index.html
@@ -52,13 +52,27 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-
+            <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
+              <img src="images/emnlp2021.png" alt="emnlp21" height="160">
+            </td>
+            <td width="75%" valign="middle"><a href="https://www.cc.gatech.edu/~dyang888/docs/emnlp21_hypermixup.pdf">
+                <papertitle>HypMix: Hyperbolic Interpolative Data Augmentation</papertitle></a>>
+              <br><p>
+              Ramit Sawhney, Megh Thakkar, <strong>Shivam Agarwal</strong>, Di Jin, Diyi Yang, Lucie Flek
+              <br>
+              <em>The 2021 Conference on Empirical Methods in Natural Language Processing</em> (EMNLP 2021)
+            </p>
+            </td>
+          </tr>
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle;text-align:center">
               <img src="images/uai.png" alt="uai21" height="160">
             </td>
             <td width="75%" valign="middle">
+              <a href="https://www.auai.org/uai2021/pdf/uai2021.638.pdf">
                 <papertitle>Modeling Financial Uncertainty with Multivariate Temporal Entropy-based Curriculums</papertitle>
+              </a>
               <br><p>
               Ramit Sawhney, Arnav Wadhwa, Vivek Mittal, Ayush Mangal, <strong>Shivam Agarwal</strong>, Rajiv Shah
               <br>
