--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <img src="images/emnlp2021.png" alt="emnlp21" height="160">
             </td>
             <td width="75%" valign="middle"><a href="https://www.cc.gatech.edu/~dyang888/docs/emnlp21_hypermixup.pdf">
-                <papertitle>HypMix: Hyperbolic Interpolative Data Augmentation</papertitle></a>>
+                <papertitle>HypMix: Hyperbolic Interpolative Data Augmentation</papertitle></a>
               <br><p>
               Ramit Sawhney, Megh Thakkar, <strong>Shivam Agarwal</strong>, Di Jin, Diyi Yang, Lucie Flek
               <br>
