--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <br><p>
               Ramit Sawhney, Megh Thakkar, <strong>Shivam Agarwal</strong>, Di Jin, Diyi Yang, Lucie Flek
               <br>
-              <em>The 2021 Conference on Empirical Methods in Natural Language Processing</em> (EMNLP 2021)
+              <em>The 2021 Conference on Empirical Methods in Natural Language Processing</em> (Proceedings of EMNLP 2021)
             </p>
             </td>
           </tr>
@@ -126,7 +126,7 @@
               <p>
               Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
-              <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (NAACL 2021)
+              <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (Proceedings of NAACL 2021)
             </p>
             </td>
           </tr>
@@ -209,7 +209,7 @@
               <br><p>
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
-              <em>Empirical Methods in Natural Language Processing</em>,  (EMNLP 2020), [AR=24.6%]
+              <em>Empirical Methods in Natural Language Processing</em>,  (Proceedings of EMNLP 2020), [AR=24.6%]
             </p>
             </td>
           </tr>
