--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in natural language processing, computational social science, machine learning, geometric deep learning, and quantitative finance. I have presented my work in these areas in several top tier conferences including EMNLP, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. 
+                I'm interested in natural language processing, computational social science, machine learning, geometric deep learning, and quantitative finance. I have presented my work in these areas in several top tier conferences including EMNLP, UAI, WWW, IJCAI, AAAI, ICDM, COLING and many more. * indicates joint first authors. 
               </p>
             </td>
           </tr>
@@ -62,6 +62,8 @@
               Ramit Sawhney, Megh Thakkar, <strong>Shivam Agarwal</strong>, Di Jin, Diyi Yang, Lucie Flek
               <br>
               <em>The 2021 Conference on Empirical Methods in Natural Language Processing</em> (Proceedings of EMNLP 2021)
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -230,7 +232,29 @@
             </td>
           </tr>
         </tbody></table>
+
+
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td>
+              <heading>Service</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td>
+              <heading>Service</heading>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding:10px;width:100%;vertical-align:middle">
+            Program Committee Member, WWWW, 2021 <br>
+            Reviewer for WSDM, EMNLP, ACL, AISTATS, CIKM, NAACL, ASONAM
+          </td>
+          </tr>
+          </tbody></table>
+<!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
                 <br>
@@ -239,7 +263,7 @@
               </p>
             </td>
           </tr>
-        </tbody></table>
+        </tbody></table> -->
       </td>
     </tr>
   </table>
