--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <p>
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
-              <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021), Short
+              <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021)
             </p>
             </td>
           </tr>
@@ -128,7 +128,7 @@
               <p>
               Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
-              <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (Proceedings of NAACL 2021)
+              <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (NAACL 2021)
             </p>
             </td>
           </tr>
