--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
               Ramit Sawhney, Arnav Wadhwa, Vivek Mittal, Ayush Mangal, <strong>Shivam Agarwal</strong>, Rajiv Shah
               <br>
               <em>37th Conference on Uncertainty in Artificial Intelligence</em> (UAI 2021)
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -95,6 +97,8 @@
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>30th International Joint Conference on Artificial Intelligence</em> (IJCAI 2021), [AR=13.9%]
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -112,6 +116,8 @@
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Megh Thakkar, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>The 44th International ACM SIGIR Conference on Research and Development in Information Retrieval</em> (SIGIR 2021)
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -129,6 +135,8 @@
               Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
               <em>2021 Annual Conference of the North American Chapter of the Association for Computational Linguistics</em>,  (NAACL 2021)
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -146,6 +154,8 @@
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>30th The Web Conference</em>, (WWW 2021)
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -162,6 +172,8 @@
               Ramit Sawhney, Arnav Wadhwa, <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
               <em>European Chapter of the Association for Computational Linguistics</em>, (EACL 2021), [AR=24%]
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -178,6 +190,8 @@
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Tyler Derr, Rajiv Ratn Shah
               <br>
               <em>AAAI Conference on Artificial Intelligence</em>, (AAAI 2021), [AR=21%]
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -194,6 +208,8 @@
              Ramit Sawhney, Arnav Wadhwa,  <strong>Shivam Agarwal</strong>, Rajiv Ratn Shah
               <br>
               <em>International Conference on Computational Linguistics</em>, (COLING 2020), [AR=21%]
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
               <br>
               <font color="red"><strong>(Outstanding Paper Award)</strong></font>
             </p>
@@ -212,6 +228,8 @@
               <strong>Shivam Agarwal</strong>*, Ramit Sawhney*, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>Empirical Methods in Natural Language Processing</em>,  (Proceedings of EMNLP 2020), [AR=24.6%]
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
@@ -228,23 +246,19 @@
              Ramit Sawhney, <strong>Shivam Agarwal</strong>, Arnav Wadhwa, Rajiv Ratn Shah
               <br>
               <em>IEEE International Conference on Data Mining</em>, (ICDM 2020), [AR=9.7%]
+              <br>
+              <a href="https://github.com/caisa-lab/hypmix-emnlp">[Code]</a>
             </p>
             </td>
           </tr>
         </tbody></table>
 
 
+    
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td>
-              <heading>Service</heading>
-            </td>
-          </tr>
-        </tbody></table>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-          <tr>
-            <td>
-              <heading>Service</heading>
+              <heading>Services</heading>
             </td>
           </tr>
           <tr>
@@ -254,7 +268,7 @@
           </td>
           </tr>
           </tbody></table>
-<!--         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
             <td style="padding:0px">
                 <br>
@@ -263,7 +277,7 @@
               </p>
             </td>
           </tr>
-        </tbody></table> -->
+        </tbody></table>
       </td>
     </tr>
   </table>
